--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -14,7 +14,8 @@
     position: relative;
     float: left;
     img {
-      width: 100%;
+      height: 100%;
+      width: auto;
     }
   }
   .post-info {
@@ -96,16 +97,19 @@
     }
     .action-buttons {
       position: absolute;
-      width: 30%;
+      width: 150px;
       margin: 0;
-      height: 40px;
-      top: 255px;
+      height: 75px;
+      top: 220px;
       right: 5px;
+      flex-direction: column;
+      justify-content: flex-end;
       button {
         height: 40px;
-        width: 49%;
+        width: 100%;
       }
       .share {
+        margin-bottom: 5px; 
         background-color: rgba(204, 204, 204, 0.7);
       }
     }
@@ -118,7 +122,7 @@
       height: 400px;
     }
     .action-buttons {
-      top: 355px;
+      top: 320px;
     }
   }
 }
