feed nearly done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <nav>
-  <a routerLink="/" routerLinkActive="active">
+  <a routerLink="/posts" routerLinkActive="active">
+    <p>Posts</p>
+  </a>
+  <a routerLink="/feed" routerLinkActive="active">
     <p>Home</p>
+  </a>
+  <a routerLink="/about" routerLinkActive="active">
+    <p>About</p>
   </a>
 </nav>
 <main>
