--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,11 +21,12 @@ nav {
     color: #333333;
     padding: 10px;
     box-sizing: border-box;
+    margin: 0 15px;
     p {
       z-index: 9999;
     }
   }
-  a.active {
+  a.active, a:hover {
     height: 100%;
     font-size: 22px;
   }
