single post set up without share button

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -25,7 +25,7 @@
       Share
       <i class="fas fa-share"></i>
     </button>
-    <button class="see-more">
+    <button class="see-more" (click)="goToPost(post.id)">
       See More
       <i class="fas fa-external-link-alt"></i>
     </button>
