--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ nav {
   width: 100%;
   background-color: rgba(243, 243, 243, 0.6);
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   box-shadow: 0px -1px 4px 0px rgba(204, 204, 204, 0.5);
   a {
