--- a/src/app/components/posts/archive/places/places.component.html
+++ b/src/app/components/posts/archive/places/places.component.html
@@ -1,3 +1,6 @@
-<p>
-  places works!
-</p>
+<div class="place" *ngFor="let place of places">
+  <button (click)="openPlace(place.id)">
+    <p>{{place.name}}</p>
+    <i class="fas fa-external-link-alt"></i>
+  </button>
+</div>
