--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,8 @@ nav {
   box-shadow: 0px -1px 4px 0px rgba(204, 204, 204, 0.5);
   a {
     position: relative;
-    height: 75%;
-    font-size: 20px;
+    height: 100%;
+    font-size: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,39 +26,33 @@ nav {
       z-index: 9999;
     }
   }
-  a.active, a:hover {
-    height: 100%;
-    font-size: 22px;
-  }
   a::after,
   a::before {
     content: "";
     position: absolute;
-    bottom: 0;
     transition: all 0.3s ease;
-    opacity: 0.9;
+    background-color: #cccccc;
   }
   a::after {
     right: 0;
-    width: 50%;
-    height: 0;
-    background: rgb(204, 204, 204);
-    background: linear-gradient(90deg, rgba(204, 204, 204, 1) 50%, rgba(243, 243, 243, 1) 100%);
+    top: 0;
+    width: 0%;
+    height: 10px;
+    opacity: 0.9;
   }
   a::before {
     left: 0;
-    width: 0;
-    height: 100%;
-    background: rgb(243, 243, 243);
-    background: linear-gradient(90deg, rgba(243, 243, 243, 1) 0%, rgba(204, 204, 204, 1) 50%);
+    bottom: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0.6;
   }
   a.active::after,
   a:hover::after {
-    height: 100%;
+    width: 100%;
   }
-  a.active::before,
-  a:hover::before {
-    width: 50%;
+  a.active::before {
+    height: calc(100% - 10px);
   }
 }
 
@@ -82,6 +76,14 @@ main {
   nav {
     top: 0;
     box-shadow: 0px 1px 4px 0px rgba(204, 204, 204, 0.5);
+    a::after {
+      bottom: 0;
+      top: auto;
+    }
+    a::before {
+      top: 0;
+      bottom: auto;
+    }
   }
   main {
     margin: 60px 0 5px;
