--- a/src/app/components/posts/archive/places/places.component.scss
+++ b/src/app/components/posts/archive/places/places.component.scss
@@ -10,7 +10,8 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0 15px;
     background-color: rgba(243, 243, 243, 0.6);
     border: none;
     cursor: pointer;
