updated feed to include place and date links

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -6,11 +6,11 @@
     <div class="title">
       <h5>{{post.title}}</h5>
       <div class="secondary">
-        <div class="date">
+        <div class="date" (click)="openDate(post.date.toDateString())">
           <i class="fas fa-calendar-alt"></i>
           <h6>{{post.date.toDateString()}}</h6>
         </div>
-        <div class="place">
+        <div class="place" (click)="openPlace(post.placeId)">
           <i class="fas fa-map-marker"></i>
           <h6>{{post.place}}</h6>
         </div>
