--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -14,8 +14,8 @@
     position: relative;
     float: left;
     img {
-      height: 100%;
-      width: auto;
+      height: auto;
+      width: 100%;
     }
   }
   .post-info {
