added link feedback styling

--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -55,6 +55,12 @@
         .date {
           margin-right: 10px;
         }
+        .date:hover, .place:hover {
+          cursor: pointer;
+          h6 {
+            text-decoration: underline;
+          }
+        }
       }
     }
     .body {
