--- a/src/app/components/posts/archive/places/places.component.scss
+++ b/src/app/components/posts/archive/places/places.component.scss
@@ -12,20 +12,32 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 15px;
-    background-color: rgba(243, 243, 243, 0.6);
+    background-color: #FEFEFE;
     border: none;
     cursor: pointer;
+    box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s ease;
     p, i {
       position: relative;
-      z-index: 9999;
+      // z-index: 9999;
       font-size: 18px;
     }
   }
+}
+
+.place-shell {
+  margin-bottom: 70px;
+  position: relative;
+  float: left;
+  width: 100%; 
 }
 
 @media only screen and (min-width: 750px) {
   .place {
     width: calc(33.333333% - 30px);
     margin: 5px 15px;
+    button:hover:not([active]) {
+      transform: translateY(-3px);
+    }
   }
 }
