--- a/src/app/components/posts/post/post.component.html
+++ b/src/app/components/posts/post/post.component.html
@@ -1,15 +1,23 @@
 <div class="post">
-  <h3 class="title">{{post?.title}}</h3>
-  <h4 class="secondary">
-    <a (click)="openDate(post?.date.toDateString())">
-      <i class="fas fa-calendar-alt"></i>
-      <h6>{{post?.date.toDateString()}}</h6>
-    </a>
-    <a (click)="openPlace(post?.placeId)">
-      <i class="fas fa-map-marker"></i>
-      <h6>{{post?.place}}</h6>
-    </a>
-  </h4>
-  <img *ngIf="post?.image" [src]="post?.image" alt="Post Visual">
-  <p>{{post?.body}}</p>
+  <div class="main-img" *ngIf="post?.image">
+    <img [src]="post?.image" alt="Post Image">
+  </div>
+  <div class="post-info">
+    <div class="title">
+      <h5>{{post?.title}}</h5>
+      <div class="secondary">
+        <div class="date" (click)="openDate(post?.date?.toDateString())">
+          <i class="fas fa-calendar-alt"></i>
+          <h6>{{post?.date?.toDateString()}}</h6>
+        </div>
+        <div class="place" (click)="openPlace(post?.placeId)">
+          <i class="fas fa-map-marker"></i>
+          <h6>{{post?.place}}</h6>
+        </div>
+      </div>
+    </div>
+    <div class="body">
+      <p>{{post?.body}}</p>
+    </div>
+  </div>
 </div>
