--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,5 +1,5 @@
 <div class="post" *ngFor="let post of posts">
-  <div class="main-img">
+  <div class="main-img" *ngIf="post?.image">
     <img [src]="post.image" alt="Post Image">
   </div>
   <div class="post-info">
