--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -3,13 +3,14 @@
   float: left;
   width: 100%;
   box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.05);
+  background-color: #FEFEFE;
   margin-bottom: 30px;
   .main-img {
     width: 100%;
     height: 200px;
     overflow: hidden;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     position: relative;
     float: left;
