--- a/src/app/components/posts/archive/archive.component.scss
+++ b/src/app/components/posts/archive/archive.component.scss
@@ -9,9 +9,10 @@
     width: 100%;
     height: 50px;
     position: fixed;
-    bottom: 55px;
+    bottom: 50px;
     left: 0;
     display: flex;
+    z-index: 9999;
     a {
       height: 50px;
       color: #333;
@@ -21,6 +22,8 @@
       justify-content: center;
       width: 50%;
       position: relative;
+      background: rgb(255,251,242);
+    background: linear-gradient(40deg, rgba(255,251,242,1) 51%, rgba(255,244,224,1) 100%);
       p {
         z-index: 9999;
       }
