--- a/src/app/components/admin/workspace/new-post/new-post.component.scss
+++ b/src/app/components/admin/workspace/new-post/new-post.component.scss
@@ -40,7 +40,7 @@
     padding-top: 15px;
     position: relative;
     width: calc(100% - 10px);
-      margin: 0 5px;
+    margin: 0 5px;
     height: 50px;
     input {
       height: 100%;
@@ -66,6 +66,18 @@
       justify-content: center;
       border-radius: 16px;
       border: 3px dashed #FEFEFE;
+    }
+  }
+  .file-upload.uploaded {
+    label {
+      background-color: #28a745;
+      color: #FEFEFE;
+    }
+  }
+  .file-upload.failed {
+    label {
+      background-color: #dc3545;
+      color: #FEFEFE;
     }
   }
   .text-box {
@@ -101,6 +113,31 @@
       height: 50px;
       width: 125px;
       font-size: 18px;
+    }
+  }
+  .error-box {
+    position: absolute;
+    width: 90%;
+    height: 50%;
+    top: 25%;
+    left: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    z-index: 9999;
+    box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.05);
+    background-color: #FEFEFE;
+    h3 {
+      color: #dc3545;
+      margin: 30px 0;
+    }
+    button {
+      position: absolute;
+      width: 150px;
+      height: 50px;
+      bottom: 10px;
+      right: 10px;
     }
   }
 }
