--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="action-buttons">
-    <button class="share">
+    <button class="share" (click)="share(post.id)">
       Share
       <i class="fas fa-share"></i>
     </button>
