--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -145,6 +145,9 @@
         background-color: rgba(204, 204, 204, 0.7);
       }
     }
+    .action-buttons.reposition {
+     top: 5px;
+    }
   }
 }
 
@@ -155,6 +158,9 @@
     }
     .action-buttons {
       top: 320px;
+    }
+    .action-buttons.reposition {
+      top: 5px;
     }
   }
 }
